--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "date-format": "^4.0.14",
     "express": "^4.18.2"
   },
   "devDependencies": {
